--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -1,21 +1,21 @@
-
-
 <form action="/auth/register" method="POST">
-    <input type="text" name="username" placeholder="Username" required>
-    <input type="text" name="email" placeholder="Email" required> <!-- Added email field -->
-    <input type="password" name="password" placeholder="Password" required>
-    <input type="text" name="firstName" placeholder="First Name">
-    <input type="text" name="lastName" placeholder="Last Name">
-    <input type="number" name="age" placeholder="Age">
-    <select name="gender">
-      <option value="male">Male</option>
-      <option value="female">Female</option>
-    </select>
-    <button type="submit">Register</button>
+  <input type="text" name="username" placeholder="Username" required>
+  <input type="text" name="email" placeholder="Email" required>
+  <input type="password" name="password" placeholder="Password" required>
+  <input type="text" name="firstName" placeholder="First Name">
+  <input type="text" name="lastName" placeholder="Last Name">
+  <input type="number" name="age" placeholder="Age">
+  <select name="gender">
+    <option value="male">Male</option>
+    <option value="female">Female</option>
+  </select>
+  <select name="role">
+    <option value="editor">Editor</option>
+    <option value="admin">Admin</option>
+  </select>
+  <button type="submit">Register</button>
 </form>
 
 <% if (typeof errorMessage !== 'undefined') { %>
-    <p style="color: red;"><%= errorMessage %></p>
+  <p style="color: red;"><%= errorMessage %></p>
 <% } %>
-
-  
