--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -1,6 +1,6 @@
 <form action="/auth/register" method="POST">
   <input type="text" name="username" placeholder="Username" required>
-  <input type="text" name="email" placeholder="Email" required>
+  <input type="email" name="email" placeholder="Email" required>
   <input type="password" name="password" placeholder="Password" required>
   <input type="text" name="firstName" placeholder="First Name">
   <input type="text" name="lastName" placeholder="Last Name">
@@ -9,13 +9,5 @@
     <option value="male">Male</option>
     <option value="female">Female</option>
   </select>
-  <select name="role">
-    <option value="editor">Editor</option>
-    <option value="admin">Admin</option>
-  </select>
   <button type="submit">Register</button>
 </form>
-
-<% if (typeof errorMessage !== 'undefined') { %>
-  <p style="color: red;"><%= errorMessage %></p>
-<% } %>
