--- a/views/main.ejs
+++ b/views/main.ejs
@@ -29,17 +29,18 @@
     <% } %>
   </div>
 
-  <!-- Fixed Carousel -->
-  <div id="fixedCarousel" class="carousel slide mt-5" data-bs-ride="carousel">
+
+  <div class="d-flex justify-content-center align-items-center" ></div>
+  <div id="fixedCarousel" class="carousel slide w-50" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/uploads/R.jpg" class="d-block w-100" alt="Image 1">
+        <img src="/uploads/R.jpg" class="d-block w-100 rounded" alt="Image 1">
       </div>
       <div class="carousel-item">
-        <img src="/uploads/S.jpg" class="d-block w-100" alt="Image 2">
+        <img src="/uploads/S.jpg" class="d-block w-100 rounded" alt="Image 2">
       </div>
       <div class="carousel-item">
-        <img src="/uploads/T.jpg" class="d-block w-100" alt="Image 3">
+        <img src="/uploads/T.jpg" class="d-block w-100 rounded" alt="Image 3">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#fixedCarousel" data-bs-slide="prev">
