--- a/views/portfolio/editor.ejs
+++ b/views/portfolio/editor.ejs
@@ -10,7 +10,7 @@
 <body>
   <%- include('../partials/nav') %>
   <div class="container mt-4">
-    <h1 class="text-center">Editor Panel: Add Portfolio Items</h1>
+    <h1 class="text-center">Editor Panel</h1>
 
     <form action="/portfolio/create" method="POST" enctype="multipart/form-data" class="mb-4">
       <div class="mb-3">
